# momenbasel_vulnhawk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  language_request.yml
.github/workflows/: vulnhawk.yml
docs/: logo.html
scripts/: demo_output.py
tests/: test_chunker.py  test_models.py  test_reporters.py
tests/fixtures/: vulnerable_go.go  vulnerable_js.js  vulnerable_python.py
vulnhawk/: __init__.py  cli.py  models.py
vulnhawk/llm/: base.py  claude.py  claude_code.py  codex_cli.py  ollama.py  openai_backend.py
vulnhawk/reporters/: json_reporter.py  markdown.py  sarif.py  terminal.py
vulnhawk/rules/: prompts.py
vulnhawk/scanner/: chunker.py  engine.py
vulnhawk/utils/: sarif_input.py
